--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,10 @@
-.content {
-  height: calc(100vh - 192px);
-  padding: 10px;
+.app-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  .content {
+    flex: 1;
+    padding: 20px;
+  }
 }
