--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,6 +1,8 @@
-div {
-  width: 100%;
-  height: 100px;
-  color: wheat;
-  background: #223322;
+footer {
+  height: 50px;
+  background: #16204c;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
