--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,10 +1,3 @@
-.header {
-  height: 80px;
-  background-color: lightcoral;
-}
-
-.example-fill-remaining-space {
-  /* This fills the remaining space, by using flexbox. 
-     Every toolbar row uses a flexbox row layout. */
+.fill-remaining-space {
   flex: 1 1 auto;
 }
