--- a/src/app/modules/user/components/user-grid/user-grid.component.html
+++ b/src/app/modules/user/components/user-grid/user-grid.component.html
@@ -9,6 +9,21 @@
     </mat-form-field>
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null; rowSelection()"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="first_name">
         <th mat-header-cell *matHeaderCellDef> First Name</th>
         <td mat-cell *matCellDef="let user"> {{user.first_name}} </td>
@@ -23,7 +38,8 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row); rowSelection()">
+      </tr>
     </table>
   </mat-card-content>
 
