-Fixed ngrx store

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -8,11 +8,11 @@
       </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="navTo('/home')">
-          <mat-icon>dialpad</mat-icon>
+          <mat-icon>home</mat-icon>
           <span>Home</span>
         </button>
         <button mat-menu-item (click)="navTo('/users')">
-          <mat-icon>voicemail</mat-icon>
+          <mat-icon>account_circle</mat-icon>
           <span>Users</span>
         </button>
       </mat-menu>
