--- a/src/app/modules/home/pages/home.page.html
+++ b/src/app/modules/home/pages/home.page.html
@@ -1,1 +1,1 @@
-<button essentialFunctionality mat-raised-button color="primary">Show More</button>
+<button essentialFunctionality mat-raised-button color="accent">Show More</button>
