--- a/src/app/modules/user/components/user-grid/user-grid.component.html
+++ b/src/app/modules/user/components/user-grid/user-grid.component.html
@@ -2,14 +2,13 @@
   <mat-card-title>Users</mat-card-title>
 
   <mat-card-content>
-
+    <h3>User selection is connected with NGRX. Preselected value is defined as a part of initial state</h3>
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Search By User Name">
     </mat-form-field>
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef>
           <mat-checkbox (change)="$event ? masterToggle() : null; rowSelection()"
@@ -18,12 +17,11 @@
           </mat-checkbox>
         </th>
         <td mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-            [checked]="selection.isSelected(row)">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="toggleSelection(row); rowSelection()"
+            [checked]="isSelected(row.id)">
           </mat-checkbox>
         </td>
       </ng-container>
-
       <ng-container matColumnDef="first_name">
         <th mat-header-cell *matHeaderCellDef> First Name</th>
         <td mat-cell *matCellDef="let user"> {{user.first_name}} </td>
@@ -36,14 +34,18 @@
         <th mat-header-cell *matHeaderCellDef> Email</th>
         <td mat-cell *matCellDef="let user"> {{user.email}} </td>
       </ng-container>
+      <ng-container matColumnDef="created_at">
+        <th mat-header-cell *matHeaderCellDef> Created On</th>
+        <td mat-cell *matCellDef="let user"> {{user.created_at | date}} </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row); rowSelection()">
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="toggleSelection(row); rowSelection()">
       </tr>
     </table>
+
   </mat-card-content>
-
   <mat-card-actions>
-
+    <!-- <div *ngFor="let ngrxUser of ngrxUsers">{{ngrxUser.first_name}}</div> -->
   </mat-card-actions>
 </mat-card>
