--- a/src/app/modules/user/pages/users.page.html
+++ b/src/app/modules/user/pages/users.page.html
@@ -1,7 +1,11 @@
 <user-grid></user-grid>
-<br>
-<button *ngIf="!addNewUser" mat-raised-button color="primary" (click)="addNewUser = true">+ Add User</button>
-<button *ngIf="addNewUser" mat-raised-button color="accent" (click)="addNewUser = false">Cancel User Creation</button>
-<br>
-<br>
-<user-form *ngIf="addNewUser" (onUserCreate)="addNewUser = false"></user-form>
+
+<button *ngIf="!addNewUser;else userForm" mat-raised-button color="primary" (click)="addNewUser = true">+ Add
+  User</button>
+
+<ng-template #userForm>
+  <button mat-raised-button color="accent" (click)="addNewUser = false">Cancel User Creation</button>
+  <div class="user-form">
+    <user-form (onUserCreate)="addNewUser = false"></user-form>
+  </div>
+</ng-template>
